--- a/samples/demo.ipynb
+++ b/samples/demo.ipynb
@@ -18,6 +18,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/usr/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/usr/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/usr/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/usr/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/usr/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/usr/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W1008 20:19:07.027875 140628087359104 __init__.py:308] Limited tf.compat.v2.summary API due to missing TensorBoard installation.\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -81,43 +95,50 @@
      "text": [
       "\n",
       "Configurations:\n",
-      "BACKBONE_SHAPES                [[256 256]\n",
-      " [128 128]\n",
-      " [ 64  64]\n",
-      " [ 32  32]\n",
-      " [ 16  16]]\n",
+      "BACKBONE                       resnet101\n",
       "BACKBONE_STRIDES               [4, 8, 16, 32, 64]\n",
       "BATCH_SIZE                     1\n",
-      "BBOX_STD_DEV                   [ 0.1  0.1  0.2  0.2]\n",
+      "BBOX_STD_DEV                   [0.1 0.1 0.2 0.2]\n",
+      "COMPUTE_BACKBONE_SHAPE         None\n",
       "DETECTION_MAX_INSTANCES        100\n",
-      "DETECTION_MIN_CONFIDENCE       0.5\n",
+      "DETECTION_MIN_CONFIDENCE       0.7\n",
       "DETECTION_NMS_THRESHOLD        0.3\n",
+      "FPN_CLASSIF_FC_LAYERS_SIZE     1024\n",
       "GPU_COUNT                      1\n",
+      "GRADIENT_CLIP_NORM             5.0\n",
       "IMAGES_PER_GPU                 1\n",
+      "IMAGE_CHANNEL_COUNT            3\n",
       "IMAGE_MAX_DIM                  1024\n",
+      "IMAGE_META_SIZE                93\n",
       "IMAGE_MIN_DIM                  800\n",
-      "IMAGE_PADDING                  True\n",
+      "IMAGE_MIN_SCALE                0\n",
+      "IMAGE_RESIZE_MODE              square\n",
       "IMAGE_SHAPE                    [1024 1024    3]\n",
       "LEARNING_MOMENTUM              0.9\n",
-      "LEARNING_RATE                  0.002\n",
+      "LEARNING_RATE                  0.001\n",
+      "LOSS_WEIGHTS                   {'rpn_class_loss': 1.0, 'rpn_bbox_loss': 1.0, 'mrcnn_class_loss': 1.0, 'mrcnn_bbox_loss': 1.0, 'mrcnn_mask_loss': 1.0}\n",
       "MASK_POOL_SIZE                 14\n",
       "MASK_SHAPE                     [28, 28]\n",
       "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 123.7  116.8  103.9]\n",
+      "MEAN_PIXEL                     [123.7 116.8 103.9]\n",
       "MINI_MASK_SHAPE                (56, 56)\n",
       "NAME                           coco\n",
       "NUM_CLASSES                    81\n",
       "POOL_SIZE                      7\n",
       "POST_NMS_ROIS_INFERENCE        1000\n",
       "POST_NMS_ROIS_TRAINING         2000\n",
+      "PRE_NMS_LIMIT                  6000\n",
       "ROI_POSITIVE_RATIO             0.33\n",
       "RPN_ANCHOR_RATIOS              [0.5, 1, 2]\n",
       "RPN_ANCHOR_SCALES              (32, 64, 128, 256, 512)\n",
-      "RPN_ANCHOR_STRIDE              2\n",
-      "RPN_BBOX_STD_DEV               [ 0.1  0.1  0.2  0.2]\n",
+      "RPN_ANCHOR_STRIDE              1\n",
+      "RPN_BBOX_STD_DEV               [0.1 0.1 0.2 0.2]\n",
+      "RPN_NMS_THRESHOLD              0.7\n",
       "RPN_TRAIN_ANCHORS_PER_IMAGE    256\n",
       "STEPS_PER_EPOCH                1000\n",
-      "TRAIN_ROIS_PER_IMAGE           128\n",
+      "TOP_DOWN_PYRAMID_SIZE          256\n",
+      "TRAIN_BN                       False\n",
+      "TRAIN_ROIS_PER_IMAGE           200\n",
       "USE_MINI_MASK                  True\n",
       "USE_RPN_ROIS                   True\n",
       "VALIDATION_STEPS               50\n",
@@ -147,9 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -288,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
