--- a/samples/occ5000/inspect_occ5000_data.ipynb
+++ b/samples/occ5000/inspect_occ5000_data.ipynb
@@ -552,6 +552,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[256 256]\n",
+      " [128 128]\n",
+      " [ 64  64]\n",
+      " [ 32  32]\n",
+      " [ 16  16]]\n",
+      "(261888, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(backbone_shapes)\n",
+    "print(anchors.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -624,21 +647,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Generator\n"
+    "## Data Generator\n",
+    "The following I don't understand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object data_generator at 0x7f20e5e6e4d0>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create data generator\n",
+    "# Create data generator \n",
     "random_rois = 2000\n",
     "g = modellib.data_generator(\n",
     "    dataset, config, shuffle=True, random_rois=random_rois, \n",
     "    batch_size=4,\n",
-    "    detection_targets=True)"
+    "    detection_targets=True)\n",
+    "print(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E1023 21:16:06.368981 139782176831104 model.py:1810] Error processing image {'id': 'CAM22-2014-03-01-20140301104500-20140301105016-bak_floor4-cam1022000-20140301104500-tarid116-frame826-line2-pos858-324-952-442-box776-8-222-538.png', 'source': 'occ5000', 'path': '/home/kidd/kidd1/occ5000/UnOcc1000/images/CAM22-2014-03-01-20140301104500-20140301105016-bak_floor4-cam1022000-20140301104500-tarid116-frame826-line2-pos858-324-952-442-box776-8-222-538.png', 'width': 300, 'height': 728, 'annotation': Array([[0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       ...,\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1728, in data_generator\n",
+      "    rpn_rois, gt_class_ids, gt_boxes, gt_masks, config)\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1311, in build_detection_targets\n",
+      "    gt_class_ids.dtype)\n",
+      "AssertionError: Expected int but got int64\n",
+      "E1023 21:16:06.619669 139782176831104 model.py:1810] Error processing image {'id': 'CAM31-2014-03-02-20140302140617-20140302141137-bak_floor4-cam1031000-20140302140617-tarid224-frame1953-line1-pos618-112-712-230-box620-10-99-281.png', 'source': 'occ5000', 'path': '/home/kidd/kidd1/occ5000/Occ4000/images/CAM31-2014-03-02-20140302140617-20140302141137-bak_floor4-cam1031000-20140302140617-tarid224-frame1953-line1-pos618-112-712-230-box620-10-99-281.png', 'width': 300, 'height': 852, 'annotation': Array([[0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       ...,\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1728, in data_generator\n",
+      "    rpn_rois, gt_class_ids, gt_boxes, gt_masks, config)\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1311, in build_detection_targets\n",
+      "    gt_class_ids.dtype)\n",
+      "AssertionError: Expected int but got int64\n",
+      "E1023 21:16:06.839392 139782176831104 model.py:1810] Error processing image {'id': 'CAM31-2014-02-20-20140220171343-20140220171911-bak_floor4-cam1031000-20140220171343-tarid37-frame1166-line1-pos608-28-688-224-box600-19-95-251.png', 'source': 'occ5000', 'path': '/home/kidd/kidd1/occ5000/Occ4000/images/CAM31-2014-02-20-20140220171343-20140220171911-bak_floor4-cam1031000-20140220171343-tarid37-frame1166-line1-pos608-28-688-224-box600-19-95-251.png', 'width': 300, 'height': 793, 'annotation': Array([[0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       ...,\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1728, in data_generator\n",
+      "    rpn_rois, gt_class_ids, gt_boxes, gt_masks, config)\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1311, in build_detection_targets\n",
+      "    gt_class_ids.dtype)\n",
+      "AssertionError: Expected int but got int64\n",
+      "E1023 21:16:07.172571 139782176831104 model.py:1810] Error processing image {'id': 'CAM30-2014-03-10-20140310130138-20140310130730-bak_floor4-cam1030000-20140310130138-tarid71-frame3142-line2-pos108-276-258-622-box96-177-182-456.png', 'source': 'occ5000', 'path': '/home/kidd/kidd1/occ5000/UnOcc1000/images/CAM30-2014-03-10-20140310130138-20140310130730-bak_floor4-cam1030000-20140310130138-tarid71-frame3142-line2-pos108-276-258-622-box96-177-182-456.png', 'width': 300, 'height': 752, 'annotation': Array([[0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       ...,\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1728, in data_generator\n",
+      "    rpn_rois, gt_class_ids, gt_boxes, gt_masks, config)\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1311, in build_detection_targets\n",
+      "    gt_class_ids.dtype)\n",
+      "AssertionError: Expected int but got int64\n",
+      "E1023 21:16:07.457833 139782176831104 model.py:1810] Error processing image {'id': 'CAM22-2014-02-22-20140222102122-20140222102710-bak_floor4-cam1022000-20140222102122-tarid384-frame3852-line2-pos1114-416-1196-544-box1108-18-171-524.png', 'source': 'occ5000', 'path': '/home/kidd/kidd1/occ5000/UnOcc1000/images/CAM22-2014-02-22-20140222102122-20140222102710-bak_floor4-cam1022000-20140222102122-tarid384-frame3852-line2-pos1114-416-1196-544-box1108-18-171-524.png', 'width': 300, 'height': 920, 'annotation': Array([[0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       ...,\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1728, in data_generator\n",
+      "    rpn_rois, gt_class_ids, gt_boxes, gt_masks, config)\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1311, in build_detection_targets\n",
+      "    gt_class_ids.dtype)\n",
+      "AssertionError: Expected int but got int64\n",
+      "E1023 21:16:07.682445 139782176831104 model.py:1810] Error processing image {'id': 'CAM31-2014-02-17-20140217101540-20140217102230-bak_floor4-cam1031000-20140217101540-tarid12-frame636-line1-pos632-108-726-234-box622-83-105-217.png', 'source': 'occ5000', 'path': '/home/kidd/kidd1/occ5000/Occ4000/images/CAM31-2014-02-17-20140217101540-20140217102230-bak_floor4-cam1031000-20140217101540-tarid12-frame636-line1-pos632-108-726-234-box622-83-105-217.png', 'width': 300, 'height': 620, 'annotation': Array([[0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       ...,\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1728, in data_generator\n",
+      "    rpn_rois, gt_class_ids, gt_boxes, gt_masks, config)\n",
+      "  File \"/home/kidd/kidd1/Mask_RCNN/mrcnn/model.py\", line 1311, in build_detection_targets\n",
+      "    gt_class_ids.dtype)\n",
+      "AssertionError: Expected int but got int64\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Expected int but got int64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-16276cd83869>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mrandom_rois\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;34m[\u001b[0m\u001b[0mnormalized_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage_meta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrpn_match\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrpn_bbox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgt_class_ids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgt_boxes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgt_masks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrpn_rois\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrois\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;34m[\u001b[0m\u001b[0mmrcnn_class_ids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmrcnn_bbox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmrcnn_mask\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"rois\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrois\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/kidd1/Mask_RCNN/mrcnn/model.py\u001b[0m in \u001b[0;36mdata_generator\u001b[0;34m(dataset, config, shuffle, augment, augmentation, random_rois, batch_size, detection_targets, no_augmentation_sources)\u001b[0m\n\u001b[1;32m   1726\u001b[0m                     \u001b[0mrois\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmrcnn_class_ids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmrcnn_bbox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmrcnn_mask\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1727\u001b[0m                         build_detection_targets(\n\u001b[0;32m-> 1728\u001b[0;31m                             rpn_rois, gt_class_ids, gt_boxes, gt_masks, config)\n\u001b[0m\u001b[1;32m   1729\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1730\u001b[0m             \u001b[0;31m# Init batch arrays\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/kidd1/Mask_RCNN/mrcnn/model.py\u001b[0m in \u001b[0;36mbuild_detection_targets\u001b[0;34m(rpn_rois, gt_class_ids, gt_boxes, gt_masks, config)\u001b[0m\n\u001b[1;32m   1309\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mrpn_rois\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1310\u001b[0m     assert gt_class_ids.dtype == np.int32, \"Expected int but got {}\".format(\n\u001b[0;32m-> 1311\u001b[0;31m         gt_class_ids.dtype)\n\u001b[0m\u001b[1;32m   1312\u001b[0m     assert gt_boxes.dtype == np.int32, \"Expected int but got {}\".format(\n\u001b[1;32m   1313\u001b[0m         gt_boxes.dtype)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Expected int but got int64"
+     ]
+    }
+   ],
+   "source": [
+    "# Get Next Image\n",
+    "if random_rois:\n",
+    "    [normalized_images, image_meta, rpn_match, rpn_bbox, gt_class_ids, gt_boxes, gt_masks, rpn_rois, rois], \\\n",
+    "    [mrcnn_class_ids, mrcnn_bbox, mrcnn_mask] = next(g)\n",
+    "    \n",
+    "    log(\"rois\", rois)\n",
+    "    log(\"mrcnn_class_ids\", mrcnn_class_ids)\n",
+    "    log(\"mrcnn_bbox\", mrcnn_bbox)\n",
+    "    log(\"mrcnn_mask\", mrcnn_mask)\n",
+    "else:\n",
+    "    [normalized_images, image_meta, rpn_match, rpn_bbox, gt_boxes, gt_masks], _ = next(g)\n",
+    "    \n",
+    "log(\"gt_class_ids\", gt_class_ids)\n",
+    "log(\"gt_boxes\", gt_boxes)\n",
+    "log(\"gt_masks\", gt_masks)\n",
+    "log(\"rpn_match\", rpn_match, )\n",
+    "log(\"rpn_bbox\", rpn_bbox)\n",
+    "image_id = modellib.parse_image_meta(image_meta)[\"image_id\"][0]\n",
+    "print(\"image_id: \", image_id, dataset.image_reference(image_id))\n",
+    "\n",
+    "# Remove the last dim in mrcnn_class_ids. It's only added\n",
+    "# to satisfy Keras restriction on target shape.\n",
+    "mrcnn_class_ids = mrcnn_class_ids[:,:,0]"
    ]
   }
  ],
